Fixed bug with overlapping words in hero word carousel

--- a/src/app/styles/header.module.scss
+++ b/src/app/styles/header.module.scss
@@ -39,6 +39,9 @@
 
 .carousel li {
   height: 20px;
+  max-lines: 1;
+  overflow: hidden;
+  width: max-content;
 }
 
 .heroWord {
